src/objects/Trip__c.object
<CustomObject>
    <description>Tracks employee travel for security monitoring and compliance.</description>
    <label>Trip</label>
    <nameField>
        <displayFormat>TRIP-{0000}</displayFormat>
        <label>Trip Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trips</pluralLabel>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>Traveler__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Traveler</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>Trips</relationshipLabel>
        <relationshipName>Trips</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Destination_Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Destination Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Trips</relationshipLabel>
        <relationshipName>Trips</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Destination_City__c</fullName>
        <label>Destination City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_Date__c</fullName>
        <label>Departure Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_Date__c</fullName>
        <label>Return Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Days__c</fullName>
        <formula>Return_Date__c - Departure_Date__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trip_Purpose__c</fullName>
        <label>Trip Purpose</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project Travel</fullName>
                </value>
                <value>
                    <fullName>Internal Meeting</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accommodation__c</fullName>
        <label>Accommodation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Contact_Number__c</fullName>
        <label>Local Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Risk_Level__c</fullName>
        <label>Risk Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Level_Source__c</fullName>
        <label>Risk Level Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Derived from Country</fullName>
                </value>
                <value>
                    <fullName>Overridden by Traveler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>Return_Date_After_Departure</fullName>
        <active>true</active>
        <description>Return date must be on or after departure date.</description>
        <errorConditionFormula>Return_Date__c &lt; Departure_Date__c</errorConditionFormula>
        <errorMessage>Return date must be on or after departure date.</errorMessage>
    </validationRules>
</CustomObject>